Sequential focus navigation can't get out of a descendent of a slot element in a document tree https://bugs.webkit.org/show_bug.cgi?id=199633

Reviewed by Darin Adler.

Source/WebCore:

The bug was caused by slot element outside a shadow tree not being treated as a focus navigation
scope owner as specified in the HTML5 specification:
https://html.spec.whatwg.org/multipage/interaction.html#focus-navigation-scope-owner

Fixed the bug by treating it as such unless custom focusing behavior is used.

Test: fast/shadow-dom/focus-across-slot-outside-shadow-tree.html

* page/FocusController.cpp:
(WebCore::isFocusScopeOwner):

LayoutTests:

Skip the newly added test in iOS since eventSender isn't supported on iOS.

* platform/ios/TestExpectations:
* fast/shadow-dom/focus-across-slot-outside-shadow-tree-expected.txt: Added.
* fast/shadow-dom/focus-across-slot-outside-shadow-tree.html: Added.


Canonical link: https://commits.webkit.org/222541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259065 268f45cc-cd09-0410-ab3c-d52691b4dbfc